# archery

./: .coveragerc  .travis.yml  MANIFEST.in  README  README.md  README.txt  consistent_algebrae.py  pyproject.toml  setup.py  test_encoche.py  tox.ini
archery/: __init__.py  barrack.py  big.py  bow.py  crafter.py  quiver.py  test_archery.py  test_fun.py  trait.py  weapon.py
archery/test/: test_archery.py  test_vector.py
archery/toy/: big
docs/: Makefile
docs/source/: barrack.rst  bow.rst  conf.py  content.rst  extra.rst  faq.rst  foreword.rst  index.rst  quiver.rst  roadmap.rst  trait.rst
docs/source/_static/: matrix.py
tests/: test_archery.py
