[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "archery"
version = "2.0.2"
description = "Traits (Mixins) to give +,/,-,* to MutableMapping"
readme = "README.txt"
python = ">=3.7"
wheel = "*"
authors = [
    { name = "julien tayon", email = "julien@tayon.net" },
    { name = "stephane bard", email = "stephane.bard@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Python Software Foundation License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jul/archery"
Documentation = "https://archery.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/jul/archery"
Issues = "https://github.com/jul/archery/issues"
Changelog = "https://github.com/jul/archery/release-notes/"

[project.scripts]
archery = "archery.toy.big:main"


[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "docs_src",
    "tests",
    "archery"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]
